# sitegenpy

./: .gitignore  README.md  build.py  init-script.sh  main.py  markdown-it-test.py  markdowntest.py  pyproject.toml  requirements.txt  testfile.hmlt  testfile.md  testfile.txt
output/: blogposttest.html  index.html  test.html
output/_assets/global/: base.html
output/about/: about.md
output/assets/global/: base.html  theme.css
output/now/: now.md
