[project]
name = "sitegenpy"
version = "0.1.0"
description = "A simple static site generator built with python and minimal dependencies. It's designed to do one thing -- generate a blog."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "markdown-it-py>=4.0.0",
    "pillow>=12.0.0",
]
